Replace all project picture references with a placeholder

--- a/index.html
+++ b/index.html
@@ -316,47 +316,47 @@
   <section id="worksPage" class="page active">
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project4.html" target="_blank" style="position: absolute; left: 302.979px; top: 459.026px; width: 300px; height: 400px; display: block; z-index: 0;">
       <div class="image-box float3" style="width: 300px; height: 400px;">
-        <img src="index_files/54602328238_174cf9e116_b.jpg" alt="Project 3">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 3">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project2.html" target="_blank" style="position: absolute; left: 112.153px; top: 2474.88px; width: 400px; height: 300px; display: block; z-index: 0;">
       <div class="image-box float4" style="width: 400px; height: 300px;">
-        <img src="index_files/54602758272_0486cc9e14_b.jpg" alt="Project 4">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 4">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project1.html" target="_blank" style="position: absolute; left: 967.321px; top: 2524.94px; width: 300px; height: 400px; display: block; z-index: 0;">
       <div class="image-box float1" style="width: 300px; height: 400px;">
-        <img src="index_files/54608563675_6a3c45364f_b.jpg" alt="Project 1">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 1">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project5.html" target="_blank" style="position: absolute; left: 673.807px; top: 1165.75px; width: 400px; height: 300px; display: block; z-index: 0;">
       <div class="image-box float5" style="width: 400px; height: 300px;">
-        <img src="index_files/giphy.gif" alt="Project 5">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 5">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project9.html" target="_blank" style="position: absolute; left: 259.121px; top: 1746.73px; width: 300px; height: 400px; display: block; z-index: 0;">
       <div class="image-box float4" style="width: 300px; height: 400px;">
-        <img src="index_files/54676266644_a32f4a2dd0_b.jpg" alt="Project 9">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 9">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project7.html" target="_blank" style="position: absolute; left: 687.497px; top: 1975.09px; width: 300px; height: 400px; display: block; z-index: 0;">
       <div class="image-box float2" style="width: 300px; height: 400px;">
-        <img src="index_files/giphy_004.gif" alt="Project 7">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 7">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project8.html" target="_blank" style="position: absolute; left: 841.064px; top: 580.019px; width: 400px; height: 300px; display: block; z-index: 0;">
       <div class="image-box float3" style="width: 400px; height: 300px;">
-        <img src="index_files/giphy_003.gif" alt="Project 8">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 8">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project3.html" target="_blank" style="position: absolute; left: 222.759px; top: 1305.68px; width: 400px; height: 300px; display: block; z-index: 0;">
       <div class="image-box float2" style="width: 400px; height: 300px;">
-        <img src="index_files/giphy_005.gif" alt="Project 2">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 2">
       </div>
     </a>
     <a href="https://filipmaliszewski.github.io/portfolio/projects/project6.html" target="_blank" style="position: absolute; left: 127.582px; top: 937.938px; width: 400px; height: 300px; display: block; z-index: 0;">
       <div class="image-box float1" style="width: 400px; height: 300px;">
-        <img src="index_files/giphy_002.gif" alt="Project 6">
+        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 6">
       </div>
     </a>
   </section>
@@ -450,15 +450,15 @@
 
     // Floating project pictures script
     const projects = [
-      { src: "https://live.staticflickr.com/65535/54608563675_6a3c45364f_b.jpg", link: "projects/project1.html" },
-      { src: "https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdXprbGwzMjdncGhyanZrcmZ3MzEycjE4cjhsYTI0NTc2dHM2ZjVzYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tcaD6uc7C4ZwizmIGh/giphy.gif", link: "projects/project3.html" },
-      { src: "https://live.staticflickr.com/65535/54602328238_174cf9e116_b.jpg", link: "projects/project4.html" },
-      { src: "https://live.staticflickr.com/65535/54602758272_0486cc9e14_b.jpg", link: "projects/project2.html" },
-      { src: "https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExc3p5cXg0Y2RkZTR6Z2NlMm51d3p2N2s0cWliNmloZDd6dGx2cm93byZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/uU6ppg72lRQnQRlgqj/giphy.gif", link: "projects/project5.html" },
-      { src: "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExaTRpNG00Y21wb3U1M2tsMm8ycWxjdGRzdG9hNnVleDNsNWZtNGZydCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/HalSGFzf9De7YieD7a/giphy.gif", link: "projects/project6.html" },
-      { src: "https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzUyYjVvdmtrYW9nOWg0YzljNHpheHdkc3R1dWQ1M2h3NWs0bm5wYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/e9H2bts6aUa69c9sYu/giphy.gif", link: "projects/project7.html" },
-      { src: "https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZmtrdndrZHY5YThuN24yem9tZHczeGQ0OTY2MzgzYmFpOHlka2ozOSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/gTVHwZggao186JgN7n/giphy.gif", link: "projects/project8.html" },
-      { src: "https://live.staticflickr.com/65535/54676266644_a32f4a2dd0_b.jpg", link: "projects/project9.html" }
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project1.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project3.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project4.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project2.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project5.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project6.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project7.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project8.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project9.html" }
     ];
 
     const screenWidth = window.innerWidth;
