--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             <p>SKILLS<br>
               skill1.....<br>
               skill2...<br>etc.<br>
-              Currently bartending in Amsterdam because the rent isn’t gonna pay itself.
+              in Amsterdam...
           </div>
         </div>
         <div class="resume-right">
