Works: Reduce number of projects and link all to missing-project.html

--- a/index.html
+++ b/index.html
@@ -319,51 +319,19 @@
 
   <!-- Works PAGE -->
   <section id="worksPage" class="page active">
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project4.html" target="_blank" style="position: absolute; left: 302.979px; top: 459.026px; width: 300px; height: 400px; display: block; z-index: 0;">
+    <a href="./missing-project.html" target="_blank" style="position: absolute; left: 302.979px; top: 459.026px; width: 300px; height: 400px; display: block; z-index: 0;">
       <div class="image-box float3" style="width: 300px; height: 400px;">
         <img src="pictures/rotating-dress-placeholder.gif" alt="Project 3">
       </div>
     </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project2.html" target="_blank" style="position: absolute; left: 112.153px; top: 2474.88px; width: 400px; height: 300px; display: block; z-index: 0;">
+    <!-- .float1-.float5: (@keyframes float1-float5) project picture animations defined above.
+          <a> elements can be placed in this section in any order.
+          @todo change script to directly load the <a> elements from this section instead of repopulate -->
+    <!--a href="./project4.html" target="_blank" style="position: absolute; left: 112.153px; top: 2474.88px; width: 400px; height: 300px; display: block; z-index: 0;">
       <div class="image-box float4" style="width: 400px; height: 300px;">
         <img src="pictures/rotating-dress-placeholder.gif" alt="Project 4">
       </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project1.html" target="_blank" style="position: absolute; left: 967.321px; top: 2524.94px; width: 300px; height: 400px; display: block; z-index: 0;">
-      <div class="image-box float1" style="width: 300px; height: 400px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 1">
-      </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project5.html" target="_blank" style="position: absolute; left: 673.807px; top: 1165.75px; width: 400px; height: 300px; display: block; z-index: 0;">
-      <div class="image-box float5" style="width: 400px; height: 300px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 5">
-      </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project9.html" target="_blank" style="position: absolute; left: 259.121px; top: 1746.73px; width: 300px; height: 400px; display: block; z-index: 0;">
-      <div class="image-box float4" style="width: 300px; height: 400px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 9">
-      </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project7.html" target="_blank" style="position: absolute; left: 687.497px; top: 1975.09px; width: 300px; height: 400px; display: block; z-index: 0;">
-      <div class="image-box float2" style="width: 300px; height: 400px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 7">
-      </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project8.html" target="_blank" style="position: absolute; left: 841.064px; top: 580.019px; width: 400px; height: 300px; display: block; z-index: 0;">
-      <div class="image-box float3" style="width: 400px; height: 300px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 8">
-      </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project3.html" target="_blank" style="position: absolute; left: 222.759px; top: 1305.68px; width: 400px; height: 300px; display: block; z-index: 0;">
-      <div class="image-box float2" style="width: 400px; height: 300px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 2">
-      </div>
-    </a>
-    <a href="https://filipmaliszewski.github.io/portfolio/projects/project6.html" target="_blank" style="position: absolute; left: 127.582px; top: 937.938px; width: 400px; height: 300px; display: block; z-index: 0;">
-      <div class="image-box float1" style="width: 400px; height: 300px;">
-        <img src="pictures/rotating-dress-placeholder.gif" alt="Project 6">
-      </div>
-    </a>
+    </a-->
   </section>
 
   <!-- About PAGE -->
@@ -455,15 +423,10 @@
 
     // Floating project pictures script
     const projects = [
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project1.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project3.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project4.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project2.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project5.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project6.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project7.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project8.html" },
-      { src: "pictures/rotating-dress-placeholder.gif", link: "projects/project9.html" }
+      { src: "pictures/rotating-dress-placeholder.gif", link: "./missing-project.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "./missing-project.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "./missing-project.html" },
+      { src: "pictures/rotating-dress-placeholder.gif", link: "./missing-project.html" },
     ];
 
     const screenWidth = window.innerWidth;
