Update about text index.html

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             2025 – Present
           <p>Universitas Gadjah Mada & University of Groningen<br>
             Double Master's Degree in Urban & Regional Planning and Engineering<br>
-            2024 – 2025, first half
+            2024 – 2025, suspended
           <p>Amsterdam University College<br>
             Full academic scholarship awarded by the Faculty of Engineering of UGM.<br>
             Bachelor in Liberal Arts & Sciences<br>
@@ -356,16 +356,12 @@
             Completed with distinction/honours<br>
             2023
           <p>Amsterdam Fashion Institute<br>
-            Bachelor of Arts in Fashion & Textile Technologies<br>
+            Bachelor of Sciencce in Fashion & Textile Technologies<br>
             Focus on visual culture and architecture, GIS, comparative urbanism, field research and urban studies.<br>
             2022 – 2023, 1 semester
-          <p>HIGH SCHOOL<br>
-            LEAF Academy, Bratislava<br>
+          <p>LEAF Academy, Bratislava<br>
             American High School Diploma with AP International Diploma<br>
-            AP Environmental Science, AP Statistics, AP Comparative Government & Politics, AP 2-D Art & Design, AP English Language and Composition, Entrepreneurial Leadership Programme.<br>
-            2019 – 2021
-          <p>Spojená Škola Tilgnerova, Bratislava<br>
-            Slovak High School Diploma ‘Maturita’ (honours programme)
+          
           <p>CERTIFICATES<br>
             Inside LVMH Certificate 2025 (issued 2025)<br>
             Specialisation: Luxury Industry and the Society, Luxury Goods, Creation and Branding, Operations and Supply Chain
