Update about me text index.html

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <div class="about-content">
       <div class="resume-section">
         <div class="resume-left">
-          <p>EDUCATION & TRAINING<br>
+          <p>EDUCATION<br>
             Amsterdam Fashion Institute & Hogeschool van Amsterdam<br>
             Master of Science in Digital Design: Digital Fashion Technologies<br>
             2025 – Present
@@ -347,23 +347,21 @@
             Double Master's Degree in Urban & Regional Planning and Engineering<br>
             2024 – 2025, suspended
           <p>Amsterdam University College<br>
-            Full academic scholarship awarded by the Faculty of Engineering of UGM.<br>
-            Bachelor in Liberal Arts & Sciences<br>
-            2021 – 2024
-          <p>Academic Exchange Program – The Chinese University of Hong Kong<br>
-            Major in Social Sciences, Environmental Policy & Urban Studies.<br>
+            Bachelor in Liberal Arts & Sciences (honours programme)<br>
+            Major in Social Sciences, Environmental Policy & Urban Studies track.<br>
             Thesis: Smelling off Stress: The Impact of Fragrant Plants on Urban Smellscapes And Wellbeing<br>
             Completed with distinction/honours<br>
+            2021 – 2024
+          <p>Academic Exchange Program – The Chinese University of Hong Kong<br>
             2023
           <p>Amsterdam Fashion Institute<br>
             Bachelor of Sciencce in Fashion & Textile Technologies<br>
-            Focus on visual culture and architecture, GIS, comparative urbanism, field research and urban studies.<br>
             2022 – 2023, 1 semester
-          <p>LEAF Academy, Bratislava<br>
+          <p>LEAF Academy<br>
             American High School Diploma with AP International Diploma<br>
           
           <p>CERTIFICATES<br>
-            Inside LVMH Certificate 2025 (issued 2025)<br>
+            Inside LVMH Certificate (issued 2025)<br>
             Specialisation: Luxury Industry and the Society, Luxury Goods, Creation and Branding, Operations and Supply Chain
           <div class="skills">
             <p>SKILLS<br>
@@ -375,7 +373,7 @@
         <div class="resume-right">
           <img src="pictures/portrait-karolina.jpeg" alt="Portrait of Karolina KUBICKOVA">
           <p>Hii. I am Karo.<br>A Digital Design and Fashion Technologies master student,
-            multimedia artist, fashion designer and writer. I also work in urban and environmental research, event production, and modeling.
+            multimedia artist, digital and physical fashion designer and writer. I also work in urban and environmental research, event production, and modeling.
           <p>I am a hopeless romantic — I am most passionate about bridging the inconceivable gap between creative industries and sustainable ecological solutions.
           <p>This is a rough draft of me as a multidisciplinary professional.
             You can find me via my <a href='https://www.instagram.com/kar_in_kaa/'>instagram</a>. Or my <a href='mailto:kajka.kubickova@gmail.com'>email</a>.
