Fix a typo plus newline/whitespace (code formatting)

--- a/index.html
+++ b/index.html
@@ -355,11 +355,10 @@
           <p>Academic Exchange Program – The Chinese University of Hong Kong<br>
             2023
           <p>Amsterdam Fashion Institute<br>
-            Bachelor of Sciencce in Fashion & Textile Technologies<br>
+            Bachelor of Science in Fashion & Textile Technologies<br>
             2022 – 2023, 1 semester
           <p>LEAF Academy<br>
-            American High School Diploma with AP International Diploma<br>
-          
+            American High School Diploma with AP International Diploma
           <p>CERTIFICATES<br>
             Inside LVMH Certificate (issued 2025)<br>
             Specialisation: Luxury Industry and the Society, Luxury Goods, Creation and Branding, Operations and Supply Chain
@@ -385,7 +384,6 @@
       </div>
     </div>
   </section>
-
   <script>
     const worksPage = document.getElementById('worksPage');
     const aboutPage = document.getElementById('aboutPage');
