Load static font Outfit-ExtraLight locally, see #2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <meta name="viewport" content="initial-scale=1.0,minimum-scale=1">
   <title>Portfolio</title>
   <style>
+    @font-face {
+      font-family: Outfit-ExtraLight;
+      src: url(fonts/Outfit-ExtraLight.ttf) format('truetype');
+    }
+
     body {
       font-family: Verdana, sans-serif;
       background: #fff;
