Update, trying to make KARO bolder index.html

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   </style></head>
 <body>
   <header>
-    <h1>KARO</h1>
+    <h1><strong>KARO</strong></h1>
     <button id="toggleBtn" aria-label="Go to About">About</button>
   </header>
 
