Adjust fonts in the header (fixes #13)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       src: url(fonts/Outfit-ExtraLight.ttf) format('truetype');
     }
 
+    @font-face {
+      font-family: Outfit-Medium;
+      src: url(fonts/Outfit-Medium.ttf) format('truetype');
+    }
+
     body {
       font-family: Outfit-ExtraLight, Verdana, sans-serif;
       background: #fff;
@@ -38,7 +43,7 @@
     }
 
     header h1 {
-      font-family: Outfit-ExtraLight, "Century Gothic", sans-serif;
+      font-family: Outfit-Medium, "Century Gothic", sans-serif;
       font-weight: bold;
       font-size: 40px;
       margin: 0;
@@ -46,7 +51,7 @@
 
     header button {
       font-family: inherit; /* <button> won't inherit font by default */
-      font-size: 16px;
+      font-size: 20px;
       color: #000;
       text-decoration: none;
       background: none;
